// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders 1`] = `
<table
  className="ax-table ax-table--borders ax-table--column-padding-small ax-table--row-padding-small ax-space--medium"
>
  <tbody
    className="ax-table__body"
  />
</table>
`;

exports[`Table renders with borders disabled 1`] = `
<table
  className="ax-table ax-table--column-padding-small ax-table--row-padding-small ax-space--medium"
>
  <tbody
    className="ax-table__body"
  />
</table>
`;

exports[`Table renders with columnPadding large 1`] = `
<table
  className="ax-table ax-table--borders ax-table--column-padding-large ax-table--row-padding-small ax-space--medium"
>
  <tbody
    className="ax-table__body"
  />
</table>
`;

exports[`Table renders with columnPadding medium 1`] = `
<table
  className="ax-table ax-table--borders ax-table--column-padding-medium ax-table--row-padding-small ax-space--medium"
>
  <tbody
    className="ax-table__body"
  />
</table>
`;

exports[`Table renders with columnPadding none 1`] = `
<table
  className="ax-table ax-table--borders ax-table--column-padding-none ax-table--row-padding-small ax-space--medium"
>
  <tbody
    className="ax-table__body"
  />
</table>
`;

exports[`Table renders with columnPadding small 1`] = `
<table
  className="ax-table ax-table--borders ax-table--column-padding-small ax-table--row-padding-small ax-space--medium"
>
  <tbody
    className="ax-table__body"
  />
</table>
`;

exports[`Table renders with rowPadding large 1`] = `
<table
  className="ax-table ax-table--borders ax-table--column-padding-small ax-table--row-padding-large ax-space--medium"
>
  <tbody
    className="ax-table__body"
  />
</table>
`;

exports[`Table renders with rowPadding medium 1`] = `
<table
  className="ax-table ax-table--borders ax-table--column-padding-small ax-table--row-padding-medium ax-space--medium"
>
  <tbody
    className="ax-table__body"
  />
</table>
`;

exports[`Table renders with rowPadding none 1`] = `
<table
  className="ax-table ax-table--borders ax-table--column-padding-small ax-table--row-padding-none ax-space--medium"
>
  <tbody
    className="ax-table__body"
  />
</table>
`;

exports[`Table renders with rowPadding small 1`] = `
<table
  className="ax-table ax-table--borders ax-table--column-padding-small ax-table--row-padding-small ax-space--medium"
>
  <tbody
    className="ax-table__body"
  />
</table>
`;
